Updates to shorten existing research, Fixed #69

--- a/document/main.bib
+++ b/document/main.bib
@@ -1135,6 +1135,32 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	year={1967},
 	publisher={ERIC}
 }
+@article{cole1992exploring,
+	title={Exploring the relationship among self-reported knowledge, objective knowledge, product usage and consumer decision making},
+	author={Cole, Catherine A and Gaeth, Gary and Chakraborty, Goutam and Levin, Irwin},
+	journal={Advances in Consumer Research},
+	volume={19},
+	pages={191},
+	year={1992}
+}
+@article{raju1995differential,
+	title={Differential effects of subjective knowledge, objective knowledge, and usage experience on decision making: An exploratory investigation},
+	author={Raju, Puthankurissi S and Lonial, Subhash C and Mangold, W Glynn},
+	journal={Journal of consumer psychology},
+	volume={4},
+	number={2},
+	pages={153--180},
+	year={1995},
+	publisher={Elsevier}
+}
+@inproceedings{ayewah2007evaluating,
+	title={Evaluating static analysis defect warnings on production software},
+	author={Ayewah, Nathaniel and Pugh, William and Morgenthaler, J David and Penix, John and Zhou, YuQian},
+	booktitle={Proceedings of the 7th ACM SIGPLAN-SIGSOFT workshop on Program analysis for software tools and engineering},
+	pages={1--8},
+	year={2007},
+	organization={ACM}
+}
 @misc{SunJDK,
 	key ={zzzSunJDK},
 	title={{Oracle Java SE} Downloads},
